# pychi

./: .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml  main.yml  pypi_publish.yml  pypi_test  pypi_test.yml  python-publish.yml
docs/: conf.py  index.rst  modules.rst  pychi.rst  readme_link.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pychi.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pychi.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pychi/: light.html  materials.html  models.html  solvers.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
examples/: pychi_example.py
examples/Cascaded Nonlinearities/: pychi_cascaded.py
examples/LiNb/: exp_LiNb.mat  n_eff_data_LiNb.npy  pychi_LiNb_exp_vs_sim.py
examples/QPM/: effective_index.npy  pychi_QPM.py
examples/SPM/: pychi_spm_validation.py
examples/SiN/: exp_SiN.mat  n_eff_data_SiN.npy  pychi_SiN_exp_vs_sim.py
src/pychi/: __init__.py  light.py  materials.py  models.py  solvers.py  utils.py
