[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pychi"
version = "0.0.1"
authors = [
  { name="Thibault Voumard", email="thibault.voumard@desy.de" },
]
description = "Simulation package for the propagation of optical pulses in nonlinear materials"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "inspect",
    "math",
    "numba",
    "pyfftw",
    "time",
    "os",
]


[project.urls]
"Homepage" = "https://github.com/TVoumard/pychi"