[build-system]
requires = ["hatchling"]
#, "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "hatchling.build"
# build-backend = 'setuptools.build_meta'

# [tool.setuptools_scm]

[project]
name = "pychi"
# dynamic = ['version']
version = "0.0.4"
authors = [
  { name="Ultrafast Microphotonics Group - DESY", email="pychi@desy.de" },
]
description = "Simulation package for the propagation of optical pulses in nonlinear media"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib==3.1.3",
    "numpy==1.21.6",
    "scipy==1.4.1",
    "numba==0.56.0",
    "pyFFTW==0.12.0",
]


[project.urls]
"Homepage" = "https://github.com/pychi-code/pychi"
"Documentation" = "https://pychi.readthedocs.io/en/latest/index.html"
"PyPI" = "https://pypi.org/project/pychi/"
